base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v1.28.0 # set deployed version
          args: ["serve"]
          ports:
            - containerPort: 80
              name: http-ntfy
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
              cpu: 150m
              memory: 150Mi
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume
            - mountPath: /var/cache/ntfy
              name: cache-volume
      volumes:
        - name: config-volume
          configMap:
            name: ntfy-config
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-pvc
