base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  type: ClusterIP
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort:  http-ntfy
