base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ntfy.hl.ancalagon.black`) && PathPrefix("/app")
      priority: 10
      middlewares:
        - name: ntfy-web-basic-auth
          namespace: ntfy
      services:
        - name: ntfy
          port: 80
    - kind: Rule
      match: Host(`ntfy.hl.ancalagon.black`)
      priority: 10
      services:
        - name: ntfy
          port: 80
  tls:
    certResolver: default
